archive/minio/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: minio
    hajimari.io/icon: pencil 
spec:
  ingressClassName: nginx
  rules:
    - host: &host minio.kleinsorge.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  name: http
  tls:
    - secretName: minio-tls-certificate
      hosts:
        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: minio-console
    hajimari.io/icon: pencil 
spec:
  ingressClassName: nginx
  rules:
    - host: &host minio-console.kleinsorge.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: minio-console
                port:
                  name: http
  tls:
    - secretName: minio-console-tls-certificate
      hosts:
        - *host
